[package]
name = "rustry_macros"
version.workspace = true
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["macros"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
revm = { workspace = true }
hex = { workspace = true }
rustry_test = { workspace = true }
