[package]
name = "rustry_test"
version.workspace = true
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
revm = { workspace = true }
tiny-keccak = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
