[package]
name = "vyper"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
syn = { workspace = true, features = ["full"] }
revm = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
rustry_test = { workspace = true }
rustry_macros = { workspace = true }

